# ESP32

./: README.md  sdkconfig.defaults
Walkie Talkie CAD files/: README.md
main/: CMakeLists.txt  main.c  walkie_display.c  walkie_types.h
